将字体等调整至base.less文件

--- a/src/assets/less/base.less
+++ b/src/assets/less/base.less
@@ -1,5 +1,9 @@
 @import 'color';
-@import 'dimensions';
+
+@font-list: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB',
+  'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
+@common-border-radius: 0.5rem;
+@common-header-height: 48px;
 
 html,
 body {
