调整导航条配色，后续完成字体和颜色管理

--- a/src/assets/less/base.less
+++ b/src/assets/less/base.less
@@ -12,7 +12,7 @@ body {
   overflow: hidden;
   height: 100vh;
   width: 100vw;
-  color: @base-font-color;
+  color: @_sys-mid-black;
 }
 
 button,
