尝试增加章节列表，考虑修改数据库数据结构

--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -12,8 +12,9 @@
 @_sys-mid-light-gray: #d1d1d6;
 @_sys-mid-gray: #c7c7cc;
 @_sys-gray: #8e8e93;
-@_sys-mid-black: #24292e;
 @_sys-light-black: #37404f;
+@_sys-mid-black: #24292e;
+@_sys-low-black: rgba(0, 0, 0, 0.54);
 @_sys-black: #000;
 @_chart-blue: #048bf4;
 @_chart-green: #1bd95d;
