优化了一下页面布局，之前的实在是太丑了……

--- a/src/assets/less/pageless/novel.less
+++ b/src/assets/less/pageless/novel.less
@@ -9,32 +9,33 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 1rem;
+  margin-top: 1.8rem;
 
-  .n-card {
+  .novel-card {
     overflow: hidden;
     box-sizing: border-box;
-    margin: 0.6rem 0.8rem;
+    margin: 0.4rem 0.8rem;
+    width: 10rem;
 
-    .n-title {
-      font-size: 1rem;
-      color: @_sys-light-black;
+    .novel-title {
+      font-size: 0.9rem;
+      line-height: 1.4rem;
+      color: @_sys-black;
       overflow: hidden;
     }
 
-    .n-img {
-      border-bottom: 1px solid @_sys-mid-light-gray;
-      margin: 0 0.4rem 2rem;
+    .novel-img {
+      margin: 0 0.4rem;
     }
   }
 
-  .n-card:hover {
+  .novel-card:hover {
     cursor: pointer;
   }
 }
 
 .function-container {
-  flex-basis: 40%;
+  flex-basis: 35%;
   border-left: 1px solid @_sys-mid-gray;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
@@ -64,7 +65,7 @@
 
         .info-title {
           display: inline-block;
-          font-size: 1.1rem;
+          font-size: 1rem;
           color: @_sys-gray;
           width: 5rem;
         }
@@ -86,8 +87,7 @@
   }
 
   .ranking-item {
-    border: 1px solid @_sys-mid-light-gray;
-    box-shadow: 2px 2px 1px @_sys-light-gray;
+    border-bottom: 1px solid @_sys-mid-light-gray;
     width: 22rem;
     height: 3rem;
     display: flex;
@@ -100,7 +100,9 @@
       margin-left: 0.6rem;
       margin-right: 0.6rem;
       width: 1.6rem;
-      font-size: 1.4rem;
+      font-size: 1.2rem;
+      color: @_sys-pink;
+      font-style: italic;
     }
   }
 }
