mask的标题用蓝色比较好

--- a/src/assets/less/pageless/novel.less
+++ b/src/assets/less/pageless/novel.less
@@ -57,7 +57,7 @@
         margin-top: 0.2rem;
 
         .mask-title {
-          color: @_sys-pink;
+          color: @_sys-blue;
         }
       }
     }
