固定了小说区的宽度

--- a/src/assets/less/pageless/novel.less
+++ b/src/assets/less/pageless/novel.less
@@ -14,6 +14,7 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   margin-top: 1.8rem;
+  width: 930px;
 
   .novel-card {
     overflow: hidden;
