修复需要翻页才能显示图片的问题

--- a/src/assets/less/pageless/novel.less
+++ b/src/assets/less/pageless/novel.less
@@ -17,10 +17,10 @@
   width: 930px;
 
   .novel-card {
-    overflow: hidden;
+    //overflow: hidden;
     box-sizing: border-box;
     margin: 0.4rem 0.8rem;
-    width: 10rem;
+    width: 160px;
 
     .novel-title {
       font-size: 0.9rem;
