调整整体布局

--- a/src/assets/less/pageless/novel.less
+++ b/src/assets/less/pageless/novel.less
@@ -111,16 +111,20 @@
       }
     }
   }
+}
 
-  .ranking-title {
+.star-container {
+  border-top: 1px solid @_sys-mid-gray;
+  margin-top: 1.3rem;
+
+  .star-title {
     display: inline-block;
-    margin-top: 0.5rem;
-    margin-left: 0.5rem;
-    margin-bottom: 0.6rem;
-    font-size: 1.4rem;
+    margin: 0.5rem 0 0.6rem 0.5rem;
+    padding: 0.4rem 0 0 0.8rem;
+    font-size: 1.2rem;
   }
 
-  .ranking-item {
+  .star-item {
     border-bottom: 1px solid @_sys-mid-light-gray;
     width: 22rem;
     height: 3rem;
@@ -129,7 +133,7 @@
     margin-top: 0.4rem;
     margin-left: 1.4rem;
 
-    .ranking {
+    .star {
       display: inline-block;
       margin-left: 0.6rem;
       margin-right: 0.6rem;
