--- a/src/assets/less/pageless/home.less
+++ b/src/assets/less/pageless/home.less
@@ -1,7 +1,7 @@
 @import "../color.less";
 
 .portal {
-  width: 1320px;
+  //width: 1320px;
   margin: 0.6rem auto;
 }
 
@@ -13,8 +13,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  margin-top: 1.8rem;
-  width: 930px;
+  margin: 1.4rem;
+  width: 35rem;
 
   .novel-card {
     //overflow: hidden;
