增加闲读板块

--- a/src/assets/less/pageless/home.less
+++ b/src/assets/less/pageless/home.less
@@ -4,7 +4,7 @@
   margin-left: 36rem;
 }
 
-.head-container {
+.line-container {
   display: flex;
 }
 
@@ -59,8 +59,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  margin: 1.4rem;
-  //width: 35rem;
+  margin: 1.4rem 0 1.4rem 1.4rem;
+  width: 35rem;
 
   .novel-card {
     text-overflow: ellipsis;
@@ -113,6 +113,17 @@
 
   .novel-card:hover {
     cursor: pointer;
+  }
+}
+
+.xuan-du-contanier {
+  width: 35rem;
+  margin-top: 1rem;
+
+  .card-container {
+    width: 45rem;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 
