--- a/src/assets/less/base.less
+++ b/src/assets/less/base.less
@@ -1,7 +1,7 @@
 @import "color";
 
-@font-list: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
-  "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+@font-list: "微软雅黑", "Helvetica Neue", Helvetica, "PingFang SC",
+  "Hiragino Sans GB", "Microsoft YaHei", Arial, sans-serif;
 @common-border-radius: 0.5rem;
 @common-header-height: 48px;
 
