为技术板块增加分类

--- a/src/assets/less/pageless/index.less
+++ b/src/assets/less/pageless/index.less
@@ -128,13 +128,9 @@
 
 // 闲读
 .xuan-du-contanier {
-  width: 35rem;
-  margin-top: 1rem;
-
-  .card-container {
-    width: 45rem;
+  .btn-container {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 // 技术
@@ -142,9 +138,16 @@
   padding-left: 1rem;
 
   .func-btn-container {
-    display: flex;
-    justify-content: flex-end;
-    margin: 0.4rem 1rem 0.2rem;
+    .btn-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .func-btn {
+      display: flex;
+      justify-content: flex-end;
+      padding-right: 1rem;
+    }
   }
   .card-des {
     height: 80px;
