增加页头用户栏

--- a/src/assets/less/pageless/index.less
+++ b/src/assets/less/pageless/index.less
@@ -2,12 +2,27 @@
 
 .portal {
   width: 60vw;
-  margin: 1rem auto;
+  margin: 0 auto;
+  padding-bottom: 1rem;
   //background-color: gray;
 }
 
 .tabs-items {
   padding: 0.6rem 0.4rem;
+}
+
+// 用户栏
+.user-func-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0.4rem 0;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid @_sys-gray;
+
+  .user-name {
+    margin-right: 1rem;
+  }
 }
 
 // 标题组件
