适配首页小说后端接口，并优化用户体验

--- a/src/assets/less/pageless/index.less
+++ b/src/assets/less/pageless/index.less
@@ -90,9 +90,8 @@
 
 // 轻小说
 .novel-list-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
   margin: 1.4rem 0 1.4rem 1.4rem;
   height: 41rem;
 
