优化了一下，先去涮毛肚，回来再说

--- a/src/assets/less/pageless/chapter.less
+++ b/src/assets/less/pageless/chapter.less
@@ -6,7 +6,7 @@
   background-color: white;
 }
 
-.book-detail {
+.book-info {
   border: 1px solid @_sys-mid-gray;
   display: flex;
   padding-right: 2rem;
@@ -25,7 +25,7 @@
       font-size: 1.5rem;
     }
 
-    .detail-container {
+    .book-detail {
       display: flex;
       margin-bottom: 1rem;
       div {
