--- a/src/assets/less/pageless/index.less
+++ b/src/assets/less/pageless/index.less
@@ -1,14 +1,76 @@
 @import "../color.less";
 
-.portal {
-  width: 60vw;
-  margin: 0 auto;
-  padding-bottom: 1rem;
-  //background-color: gray;
+@media screen and (min-width: 450px) {
+  .portal {
+    width: 63vw;
+  }
+
+  // 轻小说
+  .novel-list-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 1.4rem 0 1.4rem 1.4rem;
+
+    .novel-card {
+      width: 9rem;
+    }
+
+    .novel-img:hover .mask {
+      opacity: 1;
+    }
+
+    .mask {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(30, 30, 30, 0.8);
+      opacity: 0;
+      transition: 0.3s ease-in;
+
+      .mask-info:first-child {
+        margin-top: 100%;
+      }
+
+      .mask-info {
+        color: @_sys-white;
+        font-size: 0.8rem;
+        text-align: center;
+        margin-top: 0.2rem;
+
+        .mask-title {
+          color: @_sys-blue;
+        }
+      }
+    }
+
+    .novel-card:hover {
+      cursor: pointer;
+    }
+  }
 }
 
-.tabs-items {
-  padding: 0.6rem 0.4rem;
+@media screen and (max-width: 450px) {
+  .portal {
+    width: 98vw;
+  }
+
+  // 轻小说
+  .novel-list-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 2rem;
+
+    .mask {
+      display: none;
+    }
+  }
+}
+
+.portal {
+  margin: 0 auto;
+  padding-bottom: 1rem;
 }
 
 // 用户栏
@@ -31,6 +93,7 @@
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 1.4rem;
 
   .web-title {
     font-size: 1.6rem;
@@ -63,119 +126,20 @@
   margin-top: 0.6rem;
 }
 
-// 功能组件
-.func-component {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 2rem;
+.novel-card {
+  box-sizing: border-box;
+  margin: 0.4rem 0.8rem;
 
-  .classify-btn {
+  .novel-title {
+    width: 8rem;
+    margin: 0.6rem auto;
     font-size: 0.9rem;
-    margin-left: 2rem;
-  }
-
-  .classify-btn:hover {
-    color: @_sys-light-blue;
-    cursor: pointer;
-  }
-
-  .tabs-icon {
-    margin-right: 0.4rem;
-  }
-
-  .tabs-items {
-    background-color: @_sys-super-light-gray;
-  }
-}
-
-// 轻小说
-.novel-list-container {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  margin: 1.4rem 0 1.4rem 1.4rem;
-  height: 41rem;
-
-  .novel-card {
+    color: @_sys-mid-black;
+    overflow: hidden;
     text-overflow: ellipsis;
-    box-sizing: border-box;
-    margin: 0.4rem 0.8rem;
-    width: 160px;
-    height: 250px;
-
-    .novel-title {
-      width: 8rem;
-      margin: 0.6rem auto;
-      font-size: 0.9rem;
-      color: @_sys-mid-black;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    .novel-img {
-      margin: 0 auto;
-    }
-
-    .novel-img:hover .mask {
-      opacity: 1;
-    }
-
-    .mask {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(30, 30, 30, 0.8);
-      opacity: 0;
-      transition: 0.3s ease-in;
-
-      .mask-info:first-child {
-        margin-top: 100%;
-      }
-
-      .mask-info {
-        color: @_sys-white;
-        font-size: 0.8rem;
-        text-align: center;
-        margin-top: 0.2rem;
-
-        .mask-title {
-          color: @_sys-blue;
-        }
-      }
-    }
   }
 
-  .novel-card:hover {
-    cursor: pointer;
-  }
-}
-
-// 闲读
-.xuan-du-contanier {
-  .btn-container {
-    display: flex;
-    justify-content: center;
-  }
-}
-// 技术
-.technics-container {
-  padding-left: 1rem;
-
-  .func-btn-container {
-    .btn-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .func-btn {
-      display: flex;
-      justify-content: flex-end;
-      padding-right: 1rem;
-    }
-  }
-  .card-des {
-    height: 80px;
-    overflow: scroll;
+  .novel-img {
+    margin: 0 auto;
   }
 }
