--- a/src/assets/less/pageless/index.less
+++ b/src/assets/less/pageless/index.less
@@ -3,14 +3,22 @@
 @media screen and (min-width: 450px) {
   .portal {
     width: 65vw;
+
+    &-main {
+        display: flex;
+    }
   }
 
   // 轻小说
-  .novel-list-container {
-    display: flex;
-    flex-wrap: wrap;
+  .novel-container {
     margin: 1.4rem 0 1.4rem 1.4rem;
     padding: 1rem;
+    width: 45rem;
+
+    .novel-list {
+        display: flex;
+        flex-wrap: wrap;
+    }
 
     .novel-card {
       width: 9rem;
@@ -58,9 +66,7 @@
   }
 
   // 轻小说
-  .novel-list-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+  .novel-container {
     margin-top: 2rem;
     padding: 1rem 0;
 
@@ -128,7 +134,7 @@
   margin-top: 0.6rem;
 }
 
-.novel-list-container {
+.novel-container {
   border-radius: 15px;
   border: 1px solid @_sys-super-light-gray;
   background-color: white;
@@ -150,4 +156,19 @@
       margin: 0 auto;
     }
   }
+}
+
+.novel-search {
+    flex-basis: 100%;
+    display: grid;
+    grid-template-columns: 70% 30%;
+    padding: .4rem 1rem .2rem;
+    margin-bottom: 1rem;
+    border-bottom: 1px solid @_sys-mid-gray;
+    max-height: 4rem;
+
+    &-btn {
+        margin-left: 2.8rem;
+    }
+
 }
