--- a/src/assets/less/pageless/main.less
+++ b/src/assets/less/pageless/main.less
@@ -1,7 +1,12 @@
-.main {
-    overflow: scroll;
+@media screen and (min-width: 450px) {
+  .main {
     background-image: url(https://bebopfzj.oss-cn-hangzhou.aliyuncs.com/uPic/2020-03-12-vEZGY5.png);
     background-size: 2000px 1100px;
-    height: 100vh;
-    width: 100vw;
   }
+}
+
+.main {
+  overflow: scroll;
+  height: 100vh;
+  width: 100vw;
+}
