fix (docker nginx): 修复docker image构建nginx配置错误的问题

--- a/src/assets/less/pageless/index.less
+++ b/src/assets/less/pageless/index.less
@@ -2,7 +2,7 @@
 
 @media screen and (min-width: 450px) {
   .portal {
-    width: 65vw;
+    width: 67vw;
 
     &-main {
         display: flex;
@@ -13,10 +13,11 @@
   .novel-container {
     margin: 1.4rem 0 1.4rem 1.4rem;
     padding: 1rem;
-    width: 45rem;
+    width: 48rem;
 
     .novel-list {
         display: flex;
+        justify-content: center;
         flex-wrap: wrap;
     }
 
@@ -105,7 +106,6 @@
 
   .web-title {
     font-size: 1.6rem;
-    font-weight: 220;
   }
 
   .web-title:hover {
