--- a/src/assets/less/pageless/index.less
+++ b/src/assets/less/pageless/index.less
@@ -1,174 +1,19 @@
 @import "../color.less";
 
-@media screen and (min-width: 450px) {
-  .portal {
-    width: 67vw;
-
-    &-main {
-        display: flex;
-    }
-  }
-
-  // 轻小说
-  .novel-container {
-    margin: 1.4rem 0 1.4rem 1.4rem;
-    padding: 1rem;
-    width: 48rem;
-
-    .novel-list {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-
-    .novel-card {
-      width: 9rem;
-    }
-
-    .novel-img:hover .mask {
-      opacity: 1;
-    }
-
-    .mask {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(30, 30, 30, 0.8);
-      opacity: 0;
-      transition: 0.3s ease-in;
-
-      .mask-info:first-child {
-        margin-top: 100%;
-      }
-
-      .mask-info {
-        color: @_sys-white;
-        font-size: 0.8rem;
-        text-align: center;
-        margin-top: 0.2rem;
-
-        .mask-title {
-          color: @_sys-blue;
-        }
-      }
-    }
-
-    .novel-card:hover {
-      cursor: pointer;
-    }
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .portal {
-    width: 98vw;
-  }
-
-  // 轻小说
-  .novel-container {
-    margin-top: 2rem;
-    padding: 1rem 0;
-
-    .mask {
-      display: none;
-    }
-  }
+.index-container {
+  margin-bottom: 3rem;
 }
 
 .portal {
+  width: 67vw;
+  padding-top: 6rem;
   margin: 0 auto;
-  padding-bottom: 1rem;
 }
 
-// 用户栏
-.user-func-container {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 0.4rem 0;
-  margin-bottom: 1rem;
-  border-bottom: 1px solid @_sys-gray;
-
-  .user-name {
-    margin-right: 1rem;
-  }
-}
-
-// 标题组件
-.head-component {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 1.4rem;
-
-  .web-title {
-    font-size: 1.6rem;
-  }
-
-  .web-title:hover {
-    cursor: pointer;
-    text-decoration: underline;
-  }
-
-  .des {
-    color: @_sys-gray;
-    font-size: 0.9rem;
-  }
-
-  .blog-url {
-    color: @_sys-low-black;
-    font-size: 0.9rem;
-    font-family: sans-serif;
-  }
-
-  .blog-url:hover {
-    cursor: pointer;
-    text-decoration: underline;
-  }
-}
-
-.head-component * {
-  margin-top: 0.6rem;
-}
-
-.novel-container {
-  border-radius: 15px;
-  border: 1px solid @_sys-super-light-gray;
-  background-color: white;
-
-  .novel-card {
-    box-sizing: border-box;
-    margin: 0.4rem 0.8rem;
-
-    .novel-title {
-      width: 8rem;
-      margin: 0.6rem auto;
-      font-size: 0.9rem;
-      color: @_sys-mid-black;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    .novel-img {
-      margin: 0 auto;
-    }
-  }
-}
-
-.novel-search {
-    flex-basis: 100%;
-    display: grid;
-    grid-template-columns: 70% 30%;
-    padding: .4rem 1rem .2rem;
-    margin-bottom: 1rem;
-    border-bottom: 1px solid @_sys-mid-gray;
-    max-height: 4rem;
-
-    &-btn {
-        margin-left: 2.8rem;
-    }
-
+.func-part {
+  display: grid;
+  grid-template-columns: 65% auto;
+  grid-column-gap: 1.2rem;
+  margin-bottom: 1.2rem;
+  height: 30rem;
 }
