refactor: 删除废除的功能，重构 less 和 color

--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -4,6 +4,7 @@
 @_sys-green: #67c23a;
 @_sys-light-blue: #5ac8fa;
 @_sys-blue: #109eff;
+@_sys-heavy-blue: #1966c0;
 @_sys-purple: #5856d6;
 @_sys-pink: #ff2d55;
 @_sys-white: #fff;
@@ -21,3 +22,6 @@
 @_chart-purple: #9b49db;
 
 @_base_black: #2b2b2b;
+
+
+@_color-main: @_sys-heavy-blue;
