refactor (user): 重构 user 样式

--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -25,3 +25,81 @@
 
 
 @_color-main: @_sys-heavy-blue;
+
+// =============
+
+@--base_color_00dp_black: #2c2d2c;
+@--base_color_01dp_black: #363736;
+@--base_color_02dp_black: #3a3b3a;
+@--base_color_03dp_black: #3c3d3c;
+@--base_color_04dp_black: #3f3f3f;
+@--base_color_06dp_black: #434443;
+@--base_color_08dp_black: #454645;
+@--base_color_12dp_black: #494a49;
+@--base_color_16dp_black: #4b4c4b;
+@--base_color_24dp_black: #4d4e4d;
+@--base_color_white: #fff;
+
+:root {
+  --base_color_red: rgb(255, 59, 48);
+  --base_color_light-red: rgb(255, 45, 85);
+  --base_color_blue: rgb(0, 122, 255);
+  --base_color_light-blue: rgb(90, 200, 250);
+  --base_color_heavy-blue: rgb(88, 86, 214);
+  --base_color_green: rgb(52, 199, 89);
+  --base_color_orange: rgb(255, 149, 0);
+  --base_color_purple: rgb(175, 82, 222);
+  --base_color_yellow: rgb(255, 204, 0);
+
+  --sys_main: var(--base_color_blue);
+  --sys_main-active: #1966c0;
+  --sys_title: rgba(0, 0, 0, .85);
+  --sys_title-active: var(--base_color_24dp_black);
+  --sys_primary-text: rgba(0, 0, 0, .65);
+  --sys_secondary-text: rgba(0, 0, 0, .45);
+  --sys_third-text: rgba(0, 0, 0, .30);
+  --sys_disable: rgba(0, 0, 0, .25);
+  --sys_border: rgba(0, 0, 0, .15);
+  --sys_dividers: rgba(0, 0, 0, .09);
+  --sys_dangerous: var(--base_color_light-red);
+
+  --sys_base_background: white;
+  --sys_page_background: white;
+  --sys_component_background: #f7f7f7;
+}
+
+// 黑暗模式
+//@media (prefers-color-scheme: dark) {
+//  :root {
+//    --base_color_red: rgb(255, 69, 58);
+//    --base_color_light-red: rgb(255, 55, 95);
+//    --base_color_blue: rgb(10, 132, 255);
+//    --base_color_light-blue: rgb(100, 210, 255);
+//    --base_color_heavy-blue: rgb(94, 92, 230);
+//    --base_color_green: rgb(48, 209, 88);
+//    --base_color_orange: rgb(255, 159, 10);
+//    --base_color_purple: rgb(191, 90, 242);
+//    --base_color_yellow: rgb(255, 214, 10);
+//
+//    --sys_main: var(--base_color_blue);
+//    --sys_main-active: #1966c0;
+//    --sys_title: rgba(255, 255, 255, 1);
+//    --sys_title-active: var(--sys_main-active);
+//    --sys_primary-text: rgba(255, 255, 255, .85);
+//    --sys_secondary-text: rgba(255, 255, 255, .65);
+//    --sys_third-text: rgba(255, 255, 255, .50);
+//    --sys_disable: rgba(255, 255, 255, .45);
+//    --sys_border: rgba(255, 255, 255, .25);
+//    --sys_dividers: rgba(255, 255, 255, .15);
+//    --sys_dangerous: var(--base_color_light-red);
+//
+//    --sys_base_background: #2c2d2c;
+//    --sys_page_background: #363736;
+//    --sys_component_background: #454645;
+//  }
+//}
+
+
+
+
+
