--- a/src/assets/less/pageless/entry.less
+++ b/src/assets/less/pageless/entry.less
@@ -1,14 +1,14 @@
 @import "../color.less";
 
 .container_position(@top, @left) {
-    background-color: @_sys-white;
+    background-color: @--base_color_white;
     border-radius: 10px;
     box-shadow: 1px 1px 3px @_sys-mid-gray;
     padding: 0.8rem;
     top: @top;
     left: @left;
   }
-  
+
   .login {
     height: 100%;
     width: 100%;
@@ -18,17 +18,17 @@
         no-repeat;
       background-position: center;
     }
-  
+
     @media screen and (max-width: 450px) {
       background: url("https://bebopfzj.oss-cn-hangzhou.aliyuncs.com/uPic/2020-03-21-wi8xB9.jpg")
         no-repeat;
     }
-  
+
     .entry-btn {
       float: right;
       margin-left: 0.6rem;
     }
-  
+
     @media screen and (min-width: 450px) {
       .container {
         width: 25rem;
@@ -37,7 +37,7 @@
         .container_position(10rem, 14rem);
       }
     }
-  
+
     @media screen and (max-width: 450px) {
       .container {
         width: 18rem;
