--- a/src/assets/less/pageless/main.less
+++ b/src/assets/less/pageless/main.less
@@ -1,16 +1,20 @@
-@media screen and (min-width: 450px) {
-  .main {
-    background-image: url(https://bebopfzj.oss-cn-hangzhou.aliyuncs.com/uPic/2020-03-12-vEZGY5.png);
-    background-size: 2000px 1100px;
-  }
-}
+@import "../color";
 
 .main {
+  background-image: url(https://bebopfzj.oss-cn-hangzhou.aliyuncs.com/uPic/2020-03-12-vEZGY5.png);
+  background-size: 2000px 1100px;
   overflow: scroll;
   height: 100vh;
   width: 100vw;
 }
 
 .content {
-  margin-top: 4.1rem;
+  margin-top: 6.1rem;
 }
+
+//@media (prefers-color-scheme: dark) {
+//  .main {
+//    background-image: none;
+//    background-color: var(--sys_base_background);
+//  }
+//}
