refactor: 调整各页面样式

--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -51,17 +51,12 @@
   --base_color_purple: rgb(175, 82, 222);
   --base_color_yellow: rgb(255, 204, 0);
 
-  --sys_main: var(--base_color_blue);
-  --sys_main-active: #1966c0;
-  --sys_title: rgba(0, 0, 0, .85);
-  --sys_title-active: var(--base_color_24dp_black);
-  --sys_primary-text: rgba(0, 0, 0, .65);
-  --sys_secondary-text: rgba(0, 0, 0, .45);
-  --sys_third-text: rgba(0, 0, 0, .30);
-  --sys_disable: rgba(0, 0, 0, .25);
-  --sys_border: rgba(0, 0, 0, .15);
-  --sys_dividers: rgba(0, 0, 0, .09);
-  --sys_dangerous: var(--base_color_light-red);
+  --sys_main: rgb(0, 102, 204);
+  --sys_main-active: rgb(40, 152, 255);
+  --sys_dangerous: rgb(227, 1, 2);
+  --sys_title: rgb(30, 30, 32);
+  --sys_title-active: rgba(30, 30, 32, .6);
+  --sys_text: rgb(134, 134, 139);
 
   --sys_base_background: white;
   --sys_page_background: white;
