--- a/src/assets/less/pageless/light-novel.less
+++ b/src/assets/less/pageless/light-novel.less
@@ -8,7 +8,6 @@
 }
 
 .novel {
-  border-bottom: 1px solid var(--sys_border);
   padding: 5px 5px 1rem;
   display: grid;
   grid-template-columns: 20% auto;
@@ -17,6 +16,7 @@
 .info__title {
   color: var(--sys_main);
   font-size: 1.2rem;
+  font-weight: 500;
   margin-bottom: 0.8rem;
   cursor: pointer;
 
@@ -32,14 +32,15 @@
 }
 
 .field-title {
-  color: var(--sys_primary-text);
+  color: var(--sys_text);
   display: inline-block;
 }
 
 .info-des {
-  color: var(--sys_secondary-text);
+  color: var(--sys_text);
   font-size: 0.9rem;
-  margin-top: 0.4rem;
+  font-width: 100;
+  margin: 0.4rem 0 1rem;
 }
 
 .pagination {
